<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation" tools:locale="en">
    <string name="app_name" translatable="false">Aerial Views</string>
    <string name="plugin_uuid" translatable="false">163adf9b-34bb-43df-915c-e8fe4a020bc2</string>
    <string name="loading_title">Loading…</string>
    <string name="loading_building">Building playlist…</string>
    <string name="loading_resuming">Resuming playlist…</string>
    <string name="loading_error">No videos or photos found, please check your settings</string>
    <string name="projectivy_local_videos_options_title">Local or USB storage options</string>
    <string name="projectivy_local_videos_options_summary">Configure where local videos are found for Projectivy</string>
    <string name="common_default">(default)</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_import">Import</string>
    <string name="button_export">Export</string>
    <string name="button_search">Search</string>
    <string name="dialog_no_results_title">No Results</string>
    <string name="dialog_no_results_message">No locations found matching your search.</string>
    <string name="dialog_error_title">Error</string>
    <string name="dialog_error_search_message">Failed to search for location: %1$s</string>
    <string name="category_playlist_cache">Cache</string>
    <string name="category_actions">Actions</string>
    <string name="category_advanced">Advanced</string>
    <string name="category_media">Media</string>
    <string name="category_background_colour">Background colour</string>
    <string name="category_video_source">Video source</string>
    <string name="category_video_sources">Video sources</string>
    <string name="category_options">Options</string>
    <string name="category_location">Location</string>
    <string name="category_remote_streaming">Remote streaming</string>
    <string name="category_custom_videos_and_feeds">Custom videos and feeds</string>
    <string name="category_feed_and_stream_details">Feed and stream details</string>
    <string name="category_network">Network</string>
    <string name="category_time_of_day">Time of Day</string>
    <string name="category_progress_bar">Progress bar</string>
    <string name="category_media_scanner_options">Media scanner options</string>
    <string name="category_server_details">Server details</string>
    <string name="category_authentication_details">Authentication details</string>
    <string name="category_animation">Animation</string>
    <string name="category_settings">Settings</string>
    <string name="category_media_render_options">Media &amp; render options</string>
    <string name="category_dpad_press">Press</string>
    <string name="category_dpad_press_and_hold">Press &amp; hold</string>
    <string name="category_appearance">Appearance</string>
    <string name="category_overlays">Overlays</string>
    <string name="category_slots">Slots</string>
    <string name="category_wake_on_lan">Wake on LAN</string>
    <string name="category_videos">Videos</string>
    <string name="category_photos">Photos</string>
    <string name="category_playlist">Playlist</string>
    <string name="category_refresh_rate_options">Refresh rate options</string>
    <string name="sources_apple_title">Videos by Apple</string>
    <string name="sources_apple_summary">Stream Apple videos using your internet connection</string>
    <string name="sources_comm1_title">Videos by Jetson Creative</string>
    <string name="sources_comm1_summary">Stream these community videos using your internet connection</string>
    <string name="sources_comm2_title">Videos by Robin Fourcade</string>
    <string name="sources_comm2_summary">Stream these community videos using your internet connection</string>
    <string name="sources_local_title">Local or USB storage</string>
    <string name="sources_local_summary">Play videos &amp; photos directly from your device or attached USB storage</string>
    <string name="sources_samba_title">SMB/Samba share</string>
    <string name="sources_samba_summary">Play videos &amp; photos from a local network share on a PC or NAS device</string>
    <string name="samba_videos_enabled_title">Use SMB/Samba share media</string>
    <string name="samba_videos2_enabled_title">Use secondary SMB/Samba credentials</string>
    <string name="samba_media_type_title">Choose media type</string>
    <string name="samba_videos_test_connection">Test connection settings</string>
    <string name="samba_videos_hostname_title">Hostname</string>
    <string name="samba_videos_hostname_summary">IP address of the server</string>
    <string name="samba_videos_domainname_title">Domain name</string>
    <string name="samba_videos_domainname_summary">The domain name or workgroup of the server. Optional</string>
    <string name="samba_videos_sharename_title">Share name</string>
    <string name="samba_videos_sharename_summary">The name of the share and folder containing videos &amp; photos e.g. /media/aerial</string>
    <string name="samba_videos_username_title">Username</string>
    <string name="samba_videos_username_summary">Not set. Optional</string>
    <string name="samba_videos_password_title">Password</string>
    <string name="samba_videos_password_summary">Not set. Optional</string>
    <string name="samba_videos_search_subfolders_title">Search subfolders</string>
    <string name="samba_videos_search_subfolders_summary">Search all subfolders for videos &amp; photos</string>
    <string name="samba_videos_enable_encryption_title">Enable encryption</string>
    <string name="samba_videos_enable_encryption_summary">Enables encryption for SMB connections, can reduce overall transfer speed</string>
    <string name="samba_videos_smb_dialects_title">Select SMB dialects</string>
    <string name="samba_videos_smb_dialects_summary">Choose which versions of the SMB protocol to use</string>
    <string name="advanced_wol_enable_title">Enable Wake on LAN</string>
    <string name="advanced_wol_enable_summary">Send a Wake on LAN packet before fetching media</string>
    <string name="samba_media_wol_wake_now">Test Wake on LAN settings</string>
    <string name="advanced_wol_mac_title">Target MAC Address</string>
    <string name="advanced_wol_mac_summary">MAC address of the device to wake (e.g., AA:BB:CC:DD:EE:FF)</string>
    <string name="advanced_wol_timeout_title">Wake timeout (seconds)</string>
    <string name="advanced_wol_timeout_summary">Maximum time (in seconds) to keep checking for the server after sending a WOL packet</string>
    <string name="appearance_top_row_title">Top Row</string>
    <string name="appearance_top_row_summary">Choose overlays for the top left &amp; right of the screen</string>
    <string name="appearance_bottom_row_title">Bottom Row</string>
    <string name="appearance_bottom_row_summary">Choose overlays for the bottom left &amp; right of the screen</string>
    <string name="appearance_clock_title">Clock</string>
    <string name="appearance_clock_summary">Display the current time</string>
    <string name="appearance_date_title">Date</string>
    <string name="appearance_date_summary">Display the current date</string>
    <string name="appearance_weather_title">Weather</string>
    <string name="appearance_weather_summary">Display the current weather conditions</string>
    <string name="appearance_music_title">Music</string>
    <string name="appearance_music_summary">Display the currently playing song</string>
    <string name="appearance_message_title">Message</string>
    <string name="appearance_message_summary">Display up to 4 lines of custom text</string>
    <string name="playlist_mute_videos_title">Mute videos</string>
    <string name="playlist_mute_videos_summary">Mute the sound of all videos</string>
    <string name="playlist_video_volume_title">Video volume</string>
    <string name="playlist_video_volume_summary">Choose a video volume level</string>
    <string name="playlist_shuffle_title">Shuffle videos &amp; photos</string>
    <string name="playlist_shuffle_summary">Randomises the order of the videos &amp; photos</string>
    <string name="playlist_playback_speed_title">Playback speed</string>
    <string name="playlist_playback_speed_summary">Choose a playback speed</string>
    <string name="playlist_remove_duplicates_title">Remove duplicate videos &amp; photos</string>
    <string name="playlist_remove_duplicates_summary">Remove duplicate videos &amp; photos from the playlist based on filename only</string>
    <string name="playlist_ignore_unmatched_videos_title">Ignore non-Apple, non-community videos</string>
    <string name="playlist_ignore_unmatched_videos_summary">Skip videos not recognised as Apple or community videos</string>
    <string name="playlist_slideshow_speed_title">Slideshow speed</string>
    <string name="playlist_slideshow_speed_summary">Choose a duration</string>
    <string name="dpad_button_press_summary">Configure d-pad or button press actions</string>
    <string name="dpad_button_press_and_hold_summary">Configure d-pad or button press and hold actions</string>
    <string name="dpad_allow_media_button_passthrough_title">Allow media button pass-through</string>
    <string name="dpad_allow_media_button_passthrough_summary">Passes play, pause, rewind, etc button presses to the background app (eg. music app) without exiting the screensaver</string>
    <string name="dpad_wake_on_any_button_press_title">Wake from blackout mode with any d-pad or button press</string>
    <string name="dpad_wake_on_any_button_press_summary">If disabled, only the d-pad direction or button assigned to blackout mode will wake from it</string>
    <string name="dpad_seek_interval_title">Interval for seeking backwards/forwards in a video</string>
    <string name="advanced_application_overlay_permission_title">Enable application overlay permission</string>
    <string name="advanced_application_overlay_permission_summary">Permission is required so that this app can display a special hidden window to change the refresh rate when playing videos</string>
    <string name="advanced_refresh_rate_switching_title">Auto refresh rate switching</string>
    <string name="advanced_refresh_rate_switching_summary">Change the refresh rate of the display to match the video frame rate</string>
    <string name="advanced_enable_tunneling_title">Enable tunneling</string>
    <string name="advanced_enable_tunneling_summary">Use hardware acceleration, more important for 4K/HDR</string>
    <string name="allow_fallback_decoders_title">Allow fallback decoders</string>
    <string name="allow_fallback_decoders_summary">Enables support for software-based or alternate codecs on some devices</string>
    <string name="enable_playback_logging_title">Enable playback logging</string>
    <string name="enable_playback_logging_summary">Show extra playback information in the logs. Useful for troubleshooting.</string>
    <string name="show_media_error_toasts_title">Show playback error notifications</string>
    <string name="show_media_error_toasts_summary">Display notifications when media playback errors occur</string>
    <string name="advanced_philips_dolby_vision_fix_title">Use alternate MediaCodec parsing</string>
    <string name="advanced_philips_dolby_vision_fix_summary">Fixes Dolby Vision playback on some older Philips TVs</string>
    <string name="advanced_ignore_animation_scale_title">Ignore system animation override</string>
    <string name="advanced_ignore_animation_scale_summary">Ignores Settings > Developer options > Animation duration scale - and uses 1x for animation duration</string>
    <string name="advanced_locale_menu_title">Menu text locale</string>
    <string name="advanced_locale_screensaver_title">Screensaver text (clock, description, etc) locale</string>
</resources>