<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/category_remote">
        <Preference
            app:title="@string/sources_apple_title"
            app:summary="@string/sources_apple_summary"
            app:fragment="com.neilturner.aerialviews.ui.sources.AppleVideosFragment"/>

        <Preference
            app:title="@string/sources_comm1_title"
            app:summary="@string/sources_comm1_summary"
            app:fragment="com.neilturner.aerialviews.ui.sources.Comm1VideosFragment"/>

        <Preference
            app:title="@string/sources_comm2_title"
            app:summary="@string/sources_comm2_summary"
            app:fragment="com.neilturner.aerialviews.ui.sources.Comm2VideosFragment"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/category_local">
        <Preference
            app:title="@string/sources_local_title"
            app:summary="@string/sources_local_summary"
            app:fragment="com.neilturner.aerialviews.ui.sources.LocalVideosFragment"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/category_network">
        <Preference
            app:title="@string/sources_samba_title"
            app:summary="@string/sources_samba_summary"
            app:fragment="com.neilturner.aerialviews.ui.sources.SambaVideosFragment"/>

<!--        <Preference-->
<!--            app:title="@string/sources_webdav_title"-->
<!--            app:summary="@string/sources_webdav_summary"-->
<!--            app:fragment="com.neilturner.aerialviews.ui.WebdavVideosFragment"/>-->
    </PreferenceCategory>

</PreferenceScreen>