<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

        <PreferenceCategory app:title="@string/category_playlist">
                <CheckBoxPreference
                    app:defaultValue="true"
                    app:key="shuffle_videos"
                    app:summary="@string/playlist_shuffle_summary"
                    app:title="@string/playlist_shuffle_title" />

                <CheckBoxPreference
                    app:defaultValue="true"
                    app:key="remove_duplicates"
                    app:summary="@string/playlist_remove_duplicates_summary"
                    app:title="@string/playlist_remove_duplicates_title" />
        </PreferenceCategory>

        <PreferenceCategory app:title="@string/category_photos">
                <ListPreference
                    app:defaultValue="@string/slideshow_speed_default"
                    app:entries="@array/slideshow_speed_entries"
                    app:entryValues="@array/slideshow_speed_values"
                    app:key="slideshow_speed"
                    app:title="@string/playlist_slideshow_speed_title"
                    app:useSimpleSummaryProvider="true"
                    app:dialogTitle="@string/playlist_slideshow_speed_summary" />
        </PreferenceCategory>

        <PreferenceCategory app:title="@string/category_videos">
                <CheckBoxPreference
                    app:disableDependentsState="true"
                    app:defaultValue="true"
                    app:key="mute_videos"
                    app:summary="@string/playlist_mute_videos_summary"
                    app:title="@string/playlist_mute_videos_title" />

                <ListPreference
                    app:dependency="mute_videos"
                    app:defaultValue="@string/volume_default"
                    app:entries="@array/percentage1_entries"
                    app:entryValues="@array/percentage1_values"
                    app:key="video_volume"
                    app:title="@string/playlist_video_volume_title"
                    app:useSimpleSummaryProvider="true"
                    app:dialogTitle="@string/playlist_video_volume_summary" />

                <CheckBoxPreference
                    app:defaultValue="false"
                    app:key="any_videos_ignore_non_manifest_videos"
                    app:title="@string/playlist_ignore_unmatched_videos_title"
                    app:summary="@string/playlist_ignore_unmatched_videos_summary" />

                <ListPreference
                    app:defaultValue="@string/playback_speed_default"
                    app:entries="@array/playback_speed_entries"
                    app:entryValues="@array/playback_speed_values"
                    app:key="playback_speed"
                    app:title="@string/playlist_playback_speed_title"
                    app:useSimpleSummaryProvider="true"
                    app:dialogTitle="@string/playlist_playback_speed_summary" />

                <Preference
                    app:title="@string/playlist_advanced_video_title"
                    app:summary="@string/playlist_advanced_video_summary"
                    app:fragment="com.neilturner.aerialviews.ui.settings.PlaylistAdvancedVideoFragment"/>
        </PreferenceCategory>
</PreferenceScreen>
