<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <PreferenceCategory app:title="@string/category_actions">
                <Preference
                    app:title="@string/category_dpad_press"
                    app:summary="@string/dpad_button_press_summary"
                    app:fragment="com.neilturner.aerialviews.ui.settings.DpadRemotePressFragment"/>

                <Preference
                    app:title="@string/category_dpad_press_and_hold"
                    app:summary="@string/dpad_button_press_and_hold_summary"
                    app:fragment="com.neilturner.aerialviews.ui.settings.DpadRemotePressHoldFragment"/>
        </PreferenceCategory>
        <PreferenceCategory app:title="@string/category_options">
                <CheckBoxPreference
                    app:defaultValue="true"
                    app:key="enable_media_button_passthrough"
                    app:summary="@string/dpad_allow_media_button_passthrough_summary"
                    app:title="@string/dpad_allow_media_button_passthrough_title" />

                <CheckBoxPreference
                    app:defaultValue="true"
                    app:key="wake_on_any_button_press"
                    app:summary="@string/dpad_wake_on_any_button_press_summary"
                    app:title="@string/dpad_wake_on_any_button_press_title" />

                <ListPreference
                    app:entries="@array/seek_interval_entries"
                    app:entryValues="@array/seek_interval_values"
                    app:defaultValue="@string/seek_interval_default"
                    app:key="seek_interval"
                    app:useSimpleSummaryProvider="true"
                    app:title="@string/dpad_seek_interval_title" />
        </PreferenceCategory>
</PreferenceScreen>
