<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <PreferenceCategory app:title="@string/category_video_source">
                <SwitchPreference
                    app:defaultValue="false"
                    app:key="samba_videos2_enabled"
                    app:title="@string/samba_videos2_enabled_title" />

                <Preference
                    app:dependency="samba_videos2_enabled"
                    app:disableDependentsState="false"
                    android:title="@string/samba_videos_test_connection"
                    android:key="samba_videos2_test_connection" />
        </PreferenceCategory>

        <PreferenceCategory app:title="@string/category_authentication_details">
                <EditTextPreference
                    app:dependency="samba_videos2_enabled"
                    app:disableDependentsState="false"
                    android:summary="@string/samba_videos_hostname_summary"
                    android:key="samba_videos2_hostname"
                    android:selectAllOnFocus="true"
                    android:title="@string/samba_videos_hostname_title" />

                <EditTextPreference
                    app:dependency="samba_videos2_enabled"
                    app:disableDependentsState="false"
                    android:summary="@string/samba_videos_domainname_summary"
                    android:key="samba_videos2_domainname"
                    android:selectAllOnFocus="true"
                    android:title="@string/samba_videos_domainname_title" />

                <EditTextPreference
                    app:dependency="samba_videos2_enabled"
                    app:disableDependentsState="false"
                    android:summary="@string/samba_videos_sharename_summary"
                    android:key="samba_videos2_sharename"
                    android:selectAllOnFocus="true"
                    android:title="@string/samba_videos_sharename_title" />

                <EditTextPreference
                    app:dependency="samba_videos2_enabled"
                    app:disableDependentsState="false"
                    android:summary="@string/samba_videos_username_summary"
                    android:key="samba_videos2_username"
                    android:title="@string/samba_videos_username_title" />

                <EditTextPreference
                    app:dependency="samba_videos2_enabled"
                    app:disableDependentsState="false"
                    android:summary="@string/samba_videos_password_summary"
                    android:key="samba_videos2_password"
                    android:title="@string/samba_videos_password_title" />
        </PreferenceCategory>
</PreferenceScreen>
